--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ stages:
   - name: test
     if: type = pull_request
   - name: deploy
-    if: branch = master
+    if: branch = master AND type = push AND fork = false
 
 jobs:
   include:
