--- a/.github/workflows/test-containers.yml
+++ b/.github/workflows/test-containers.yml
@@ -4,8 +4,8 @@ jobs:
   test-containers:
     runs-on: ubuntu-latest
     steps:
-      - actions/checkout@v2
-      - uses: action/setup-python@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
       - name: run build test script
