--- a/.github/workflows/build-containers.yml
+++ b/.github/workflows/build-containers.yml
@@ -6,8 +6,8 @@ on:
 jobs:
   build-containers:
     runs-on: ubuntu-latest
-    environment:
-      name: build-containers
+    environment: build-containers
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
